samples/_failures_safe/1761426627_e4dcc0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22057a96.c: In function ‘main’:
./samples/SAFE/__tmp_22057a96.c:150:22: error: expected ‘;’ at end of input
  150 |     execute_operation
      |                      ^
      |                      ;
./samples/SAFE/__tmp_22057a96.c:150:5: error: expected declaration or statement at end of input
  150 |     execute_operation
      |     ^~~~~~~~~~~~~~~~~
